cfn_benchmark/cfn_templates/JustalK__LABORATORY-AWS-CLOUDFORMATION/experiences/experience4.yml
Resources:
  MyEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: "ami-094125af156557ca2"
      KeyName: "testk"
      AvailabilityZone: "us-west-2a"
      SecurityGroupIds:
      - !Ref mySecurityGroup
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            echo "Script started" > /tmp/script.log
            yum update
            echo "[UPDATE] DONE" >> /tmp/script.log
            yum upgrade
            echo "[UPGRADE] DONE" >> /tmp/script.log
            yum autoremove
            echo "[AUTOREMOVE] DONE" >> /tmp/script.log
            yum install nodejs
            echo "[NODEJS] DONE" >> /tmp/script.log
            sudo -u ec2-user -i <<'EOF'

            # Install NVM
            curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash
            export NVM_DIR="$HOME/.nvm"
            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
            [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
            . ./.bashrc

            # Install nvm
            nvm install $NODE_VERSION

            # install NPM
            npm install npm@latest -g

            # install PM2
            npm i -g pm2

            EOF
  mySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow HTTP/HTTPS and SSH inbound and outbound traffic"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
